Added constants.py file
All paths are now stored in constants.py file.
With it, all the paths in the other files are updated.

Additionally, the requirements.txt file is added.

To be done for the moment:
* Own version of the YOLO training (started)
* data-preparation.ipynb file to prepare the data for the training without using the command line (not started)
* Test other models such as FasterRCNN and SSD (not started)
* Rewrite the report to make it my own (not started)
* Add missing links to the README.md file (not started, requieres the previous points to be done)

--- a/data-preparation/COCO_ID_DataLoader_Testing.ipynb
+++ b/data-preparation/COCO_ID_DataLoader_Testing.ipynb
@@ -29,6 +29,7 @@
     "sys.path.append('../Utils')  # Adds higher directory to python modules path.\n",
     "\n",
     "# Utils\n",
+    "from constants import *\n",
     "from datasets_generators import CocoDetection\n",
     "\n",
     "# Pytorch\n",
@@ -79,19 +80,13 @@
     }
    ],
    "source": [
-    "# Paths\n",
-    "imgs_path = \"../data/ExDark_All/Images\"\n",
-    "train_path = \"../data/ExDark_COCO/train_set.json\"\n",
-    "val_path = \"../data/ExDark_COCO/val_set.json\"\n",
-    "test_path = \"../data/ExDark_COCO/test_set.json\"\n",
-    "\n",
     "# Transforms\n",
     "image_processor = DetrImageProcessor.from_pretrained(\"facebook/detr-resnet-50\")\n",
     "\n",
     "# COCO Dataset\n",
-    "train_set = CocoDetection(image_directory_path=imgs_path,  annotation_file_path=train_path, image_processor=image_processor, )\n",
-    "val_set = CocoDetection(image_directory_path=imgs_path,  annotation_file_path=val_path, image_processor=image_processor)\n",
-    "test_set = CocoDetection(image_directory_path=imgs_path,  annotation_file_path=test_path, image_processor=image_processor)\n",
+    "train_set = CocoDetection(image_directory_path=ALL_IMAGES,  annotation_file_path=TRAIN_COCO, image_processor=image_processor, )\n",
+    "val_set = CocoDetection(image_directory_path=ALL_IMAGES,  annotation_file_path=VAL_COCO, image_processor=image_processor)\n",
+    "test_set = CocoDetection(image_directory_path=ALL_IMAGES,  annotation_file_path=TEST_COCO, image_processor=image_processor)\n",
     "\n",
     "# Collade function\n",
     "def collate_fn(batch):\n",
