--- a/data-preparation/COCO_ID_Testing.ipynb
+++ b/data-preparation/COCO_ID_Testing.ipynb
@@ -20,6 +20,7 @@
     "sys.path.append('../Utils')  # Adds higher directory to python modules path.\n",
     "\n",
     "# Utils\n",
+    "from constants import *\n",
     "from datasets_generators import CocoDetection\n",
     "\n",
     "# Pytorch\n",
@@ -67,15 +68,11 @@
     }
    ],
    "source": [
-    "# Paths\n",
-    "imgs_path = \"../data/ExDark_All/Images\"\n",
-    "coco_path = \"../data/ExDark_COCO/train_set.json\"\n",
-    "\n",
     "# Transforms\n",
     "image_processor = DetrImageProcessor.from_pretrained(\"facebook/detr-resnet-50\")\n",
     "\n",
     "# COCO Dataset\n",
-    "coco_dataset = CocoDetection(image_directory_path=imgs_path,  annotation_file_path=coco_path, image_processor=image_processor, enhancement=\"clahe\")\n",
+    "coco_dataset = CocoDetection(image_directory_path=ALL_IMAGES,  annotation_file_path=TRAIN_COCO, image_processor=image_processor, enhancement=\"clahe\")\n",
     "\n",
     "# Data\n",
     "print(\"Number of images: \", len(coco_dataset))\n",
@@ -132,10 +129,10 @@
     "to_pil_image = T.ToPILImage()\n",
     "\n",
     "# Original Image\n",
-    "with open(coco_path) as f:\n",
+    "with open(TRAIN_COCO) as f:\n",
     "  data = json.load(f)\n",
     "image_name = data['images'][image_id]['file_name']\n",
-    "og_img = cv2.imread(os.path.join(imgs_path, image_name))\n",
+    "og_img = cv2.imread(os.path.join(ALL_IMAGES, image_name))\n",
     "og_img = cv2.cvtColor(og_img, cv2.COLOR_BGR2RGB)\n",
     "og_img = to_pil_image(og_img)\n",
     "for ann in data['annotations']:\n",
