--- a/models/Transformer/Transformer.ipynb
+++ b/models/Transformer/Transformer.ipynb
@@ -39,6 +39,7 @@
     "sys.path.append('../../Utils')  # Adds higher directory to python modules path.\n",
     "\n",
     "# Utils\n",
+    "from constants import *\n",
     "from datasets_generators import CocoDetection\n",
     "\n",
     "# Pytorch\n",
@@ -138,9 +139,9 @@
    ],
    "source": [
     "# Paths\n",
-    "imgs_path = \"../../data/ExDark_All/Images\"\n",
-    "train_path = \"../../data/ExDark_COCO/train_set.json\"\n",
-    "val_path = \"../../data/ExDark_COCO/val_set.json\"\n",
+    "imgs_path = \"../\" + ALL_IMAGES\n",
+    "train_path = \"../\" + TRAIN_COCO\n",
+    "val_path = \"../\" + VAL_COCO\n",
     "\n",
     "# Transforms\n",
     "image_processor = DetrImageProcessor.from_pretrained(\"facebook/detr-resnet-50\")\n",
