--- a/results/Transformer_Metrics.ipynb
+++ b/results/Transformer_Metrics.ipynb
@@ -32,6 +32,7 @@
     "# Add Utils to path\n",
     "import sys\n",
     "sys.path.append('../Utils')  # Adds higher directory to python modules path.\n",
+    "from constants import *\n",
     "from metrics import mAP_mAR, training_evol\n",
     "from plots import plot_prediction, plot_image\n",
     "\n",
@@ -72,9 +73,9 @@
       "index created!\n",
       "Running per image evaluation...\n",
       "Evaluate annotation type *bbox*\n",
-      "DONE (t=0.97s).\n",
+      "DONE (t=0.88s).\n",
       "Accumulating evaluation results...\n",
-      "DONE (t=0.20s).\n",
+      "DONE (t=0.19s).\n",
       " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.314\n",
       " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.579\n",
       " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.292\n",
@@ -97,9 +98,9 @@
       "index created!\n",
       "Running per image evaluation...\n",
       "Evaluate annotation type *bbox*\n",
-      "DONE (t=1.13s).\n",
+      "DONE (t=1.06s).\n",
       "Accumulating evaluation results...\n",
-      "DONE (t=0.23s).\n",
+      "DONE (t=0.19s).\n",
       " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.321\n",
       " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.560\n",
       " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.331\n",
@@ -122,9 +123,9 @@
       "index created!\n",
       "Running per image evaluation...\n",
       "Evaluate annotation type *bbox*\n",
-      "DONE (t=0.92s).\n",
+      "DONE (t=0.88s).\n",
       "Accumulating evaluation results...\n",
-      "DONE (t=0.20s).\n",
+      "DONE (t=0.19s).\n",
       " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.264\n",
       " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.480\n",
       " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.260\n",
@@ -138,7 +139,7 @@
       " Average Recall     (AR) @[ IoU=0.50:0.95 | area=medium | maxDets=100 ] = 0.243\n",
       " Average Recall     (AR) @[ IoU=0.50:0.95 | area= large | maxDets=100 ] = 0.448\n",
       "loading annotations into memory...\n",
-      "Done (t=0.11s)\n",
+      "Done (t=0.09s)\n",
       "creating index...\n",
       "index created!\n",
       "Loading and preparing results...\n",
@@ -147,9 +148,9 @@
       "index created!\n",
       "Running per image evaluation...\n",
       "Evaluate annotation type *bbox*\n",
-      "DONE (t=1.05s).\n",
+      "DONE (t=0.93s).\n",
       "Accumulating evaluation results...\n",
-      "DONE (t=0.23s).\n",
+      "DONE (t=0.19s).\n",
       " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.312\n",
       " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.568\n",
       " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.317\n",
@@ -167,14 +168,14 @@
       "creating index...\n",
       "index created!\n",
       "Loading and preparing results...\n",
-      "DONE (t=0.01s)\n",
+      "DONE (t=0.00s)\n",
       "creating index...\n",
       "index created!\n",
       "Running per image evaluation...\n",
       "Evaluate annotation type *bbox*\n",
-      "DONE (t=1.04s).\n",
+      "DONE (t=0.88s).\n",
       "Accumulating evaluation results...\n",
-      "DONE (t=0.25s).\n",
+      "DONE (t=0.19s).\n",
       " Average Precision  (AP) @[ IoU=0.50:0.95 | area=   all | maxDets=100 ] = 0.323\n",
       " Average Precision  (AP) @[ IoU=0.50      | area=   all | maxDets=100 ] = 0.556\n",
       " Average Precision  (AP) @[ IoU=0.75      | area=   all | maxDets=100 ] = 0.330\n",
@@ -465,7 +466,7 @@
       "creating index...\n",
       "index created!\n",
       "loading annotations into memory...\n",
-      "Done (t=0.02s)\n",
+      "Done (t=0.01s)\n",
       "creating index...\n",
       "index created!\n",
       "loading annotations into memory...\n",
@@ -487,34 +488,33 @@
    ],
    "source": [
     "image_id = 200\n",
-    "test_path = '../data/ExDark_COCO/test_set.json'\n",
     "model_path = \"../models/Transformer/lightning_logs/\"\n",
     "width = 3\n",
     "\n",
     "fig = plt.figure(figsize=(10,10))\n",
     "\n",
     "ax1 = plt.subplot2grid((3, 2), (0, 0), colspan=2)\n",
-    "plot_image(image_id, test_path, width, 'raw')\n",
+    "plot_image(image_id, TEST_COCO, width, 'raw')\n",
     "\n",
     "ax2 = plt.subplot2grid((3, 2), (1, 0))\n",
     "enhancement = 'raw'\n",
     "model_path = f\"../models/Transformer/lightning_logs/{enhancement}/output\"\n",
-    "plot_prediction(image_id, test_path, model_path, width, enhancement)\n",
+    "plot_prediction(image_id, TEST_COCO, model_path, width, enhancement)\n",
     "\n",
     "ax3 = plt.subplot2grid((3, 2), (1, 1))\n",
     "enhancement = 'he'\n",
     "model_path = f\"../models/Transformer/lightning_logs/{enhancement}/output\"\n",
-    "plot_prediction(image_id, test_path, model_path, width, enhancement)\n",
+    "plot_prediction(image_id, TEST_COCO, model_path, width, enhancement)\n",
     "\n",
     "ax4 = plt.subplot2grid((3, 2), (2, 0))\n",
     "enhancement = 'clahe'\n",
     "model_path = f\"../models/Transformer/lightning_logs/{enhancement}/output\"\n",
-    "plot_prediction(image_id, test_path, model_path, width, enhancement)\n",
+    "plot_prediction(image_id, TEST_COCO, model_path, width, enhancement)\n",
     "\n",
     "ax5 = plt.subplot2grid((3, 2), (2, 1))\n",
     "enhancement = 'color_balance_adjustment'\n",
     "model_path = f\"../models/Transformer/lightning_logs/{enhancement}/output\"\n",
-    "plot_prediction(image_id, test_path, model_path, width, enhancement)\n",
+    "plot_prediction(image_id, TEST_COCO, model_path, width, enhancement)\n",
     "\n",
     "plt.tight_layout()\n",
     "plt.show()"
@@ -550,7 +550,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=0.02s)\n",
+      "Done (t=0.01s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -570,7 +570,7 @@
      "output_type": "stream",
      "text": [
       "loading annotations into memory...\n",
-      "Done (t=0.12s)\n",
+      "Done (t=0.10s)\n",
       "creating index...\n",
       "index created!\n"
      ]
@@ -628,27 +628,27 @@
    ],
    "source": [
     "# Individual Plots\n",
-    "plot_image(image_id, test_path, width, 'raw')\n",
+    "plot_image(image_id, TEST_COCO, width, 'raw')\n",
     "plt.show()\n",
     "\n",
     "enhancement = 'raw'\n",
     "model_path = f\"../models/Transformer/lightning_logs/{enhancement}/output\"\n",
-    "plot_prediction(image_id, test_path, model_path, width, enhancement)\n",
+    "plot_prediction(image_id, TEST_COCO, model_path, width, enhancement)\n",
     "plt.show()\n",
     "\n",
     "enhancement = 'he'\n",
     "model_path = f\"../models/Transformer/lightning_logs/{enhancement}/output\"\n",
-    "plot_prediction(image_id, test_path, model_path, width, enhancement)\n",
+    "plot_prediction(image_id, TEST_COCO, model_path, width, enhancement)\n",
     "plt.show()\n",
     "\n",
     "enhancement = 'clahe'\n",
     "model_path = f\"../models/Transformer/lightning_logs/{enhancement}/output\"\n",
-    "plot_prediction(image_id, test_path, model_path, width, enhancement)\n",
+    "plot_prediction(image_id, TEST_COCO, model_path, width, enhancement)\n",
     "plt.show()\n",
     "\n",
     "enhancement = 'color_balance_adjustment'\n",
     "model_path = f\"../models/Transformer/lightning_logs/{enhancement}/output\"\n",
-    "plot_prediction(image_id, test_path, model_path, width, enhancement)\n",
+    "plot_prediction(image_id, TEST_COCO, model_path, width, enhancement)\n",
     "plt.show()"
    ]
   }
