Project Structure Changes
The outputs folder has been moved and included in the .gitignore file.
More paths have been added to the constants.py file.

To be done for the moment:
* Own version of the YOLO training (started)
* data-preparation.ipynb file to prepare the data for the training without using the command line (not started)
* Test other models such as FasterRCNN and SSD (not started)
* Rewrite the report to make it my own (not started)
* Add missing links to the README.md file (not started, requieres the previous points to be done)

--- a/data-preparation/COCO_ID_Testing.ipynb
+++ b/data-preparation/COCO_ID_Testing.ipynb
@@ -20,7 +20,7 @@
     "sys.path.append('../Utils')  # Adds higher directory to python modules path.\n",
     "\n",
     "# Utils\n",
-    "from constants import *\n",
+    "from constants import ALL_IMAGES, TRAIN_COCO\n",
     "from datasets_generators import CocoDetection\n",
     "\n",
     "# Pytorch\n",
