--- a/data-preparation/COCO_ID_DataLoader_Testing.ipynb
+++ b/data-preparation/COCO_ID_DataLoader_Testing.ipynb
@@ -29,8 +29,8 @@
     "sys.path.append('../Utils')  # Adds higher directory to python modules path.\n",
     "\n",
     "# Utils\n",
-    "from constants import *\n",
-    "from datasets_generators import CocoDetection\n",
+    "from data_generator import CocoDetection\n",
+    "from constants import ALL_IMAGES, TRAIN_COCO, VAL_COCO, TEST_COCO\n",
     "\n",
     "# Pytorch\n",
     "from torch.utils.data import DataLoader\n",
